--- a/css/menu.css
+++ b/css/menu.css
@@ -83,9 +83,8 @@ header h1{
     width: 70%;
     height: 90%;
 
-    display: flex;
-    align-items: center;
-
+    display: grid;
+    
     background-color: white;
     border-radius: 20px;
 
@@ -93,6 +92,7 @@ header h1{
 }
 
 #content .card{
-    width: 20%;
-    height: 200px;
+    width: 15%;
+    height: 10px;
+    margin: 20px;
 }
