Changes to carrousel

--- a/css/galerie.css
+++ b/css/galerie.css
@@ -50,6 +50,7 @@ header h1{
     width: 35%;
 
     background-image: url(../assets/img/carrousel/imgtest.jpg);
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     background-position: center;
 
