--- a/css/galerie.css
+++ b/css/galerie.css
@@ -17,6 +17,9 @@ body {
 header{
     width: 100%;
     height: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 header h1{
