--- a/css/menu.css
+++ b/css/menu.css
@@ -20,7 +20,60 @@ body{
     height: 100%;
     background-color: rgba(0, 0, 0, 0.678);
 
-    display: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#display-card{
+    height: 60%;
+    width: 50%;
+
+    background-color: white;
+    border-radius: 20px;
+
+    display: flex;
+    flex-direction: column;
+}
+
+#display-card img{
+    width: 100%;
+    height: 30%;
+
+    object-fit: cover;
+
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+#display-card h1{
+    margin-left: 15px;
+
+    width: 100%;
+    height: 10%;
+
+    font-family: "Poppins";
+}
+
+#display-card svg{
+    color: var(--igreen);
+    margin-left: 15px;
+}
+
+#display-card h4{
+    margin-left: 15px;
+
+    width: 100%;
+    height: 20%;
+
+    font-family: "Playpen Sans";
+}
+
+#display-card p{
+    margin-left: 15px;
+
+    width: 100%;
+    height: 40%;
 }
 
 header{
@@ -43,6 +96,7 @@ header h1{
     font-size: 65px;
     text-align: center;
     text-shadow: #00000050 5px 5px 5px;
+    user-select: none;
 }
 
 #menu-container{
@@ -57,7 +111,7 @@ header h1{
 }
 
 #menu{
-    width: 60%;
+    width: 50%;
     height: 80%;
 
     display: flex;
@@ -87,7 +141,8 @@ header h1{
     width: 25%;
     height: 100%;
 
-    font-family: "Agbalumo";
+    font-family: "Poppins";
+    font-weight: bold;
     font-size: 15px;
     
     display: flex;
@@ -99,7 +154,7 @@ header h1{
 
 #menu nav li:hover{
     font-size: 18px;
-    font-weight: 300;
+    font-weight: 800;
     cursor: pointer;
 }
 
@@ -110,4 +165,61 @@ header h1{
     border-radius: 15px;
 
     display: grid;
+    grid-template-columns: repeat(4, 23%);
+    gap: 11px;
+
+    overflow: scroll;
+}
+
+#card-container::-webkit-scrollbar{
+    display: none;
+}
+
+.card{
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+
+    background-color: #999b7e;
+
+    border-radius: 15px;
+
+    width: 100%;
+    height: 8rem;
+    margin: 10px;
+
+    transition: all .2s;
+}
+
+.card:hover{
+    box-shadow: 3px 3px 10px black;
+    cursor: pointer;
+}
+
+.card img{
+    height: 60%;
+    width: 100%;
+
+    object-fit: cover;
+    border-radius: 15px;
+}
+
+.card div{
+    height: 40%;
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.card h3{
+    height: 25%;
+        
+    font-family: "Poppins";
+    font-size: 15px;
+    text-align: center;
+    color: var(--igrey);
 }
