--- a/css/menu.css
+++ b/css/menu.css
@@ -32,7 +32,7 @@ body{
     background-color: white;
     border-radius: 20px;
 
-    display: flex;
+    display: none;
     flex-direction: column;
 }
 
