--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,26 @@
+header{
+    width: 100%;
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background: linear-gradient(90deg,
+     var(--igreen) 0%, var(--igreen) 33.3%,
+     var(--iwhite) 33.3%, var(--iwhite) 66.6%,
+     var(--ired) 66.6%, var(--ired) 99.9%
+);
+}
+
+header h1{
+    font-family: "Italianno";
+    font-weight: 600;
+    font-size: 65px;
+    text-align: center;
+    text-shadow: #00000050 5px 5px 5px;
+    user-select: none;
+}
+
 #burger-button{
     position: absolute;
 
@@ -38,4 +61,79 @@
 
 #burger-button div::after{
     top: 15px;
+}
+
+#pop-up{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.678);
+
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+#burger-menu{
+    height: 100%;
+    width: 20%;
+    
+    position: absolute;
+    left: -20%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-start;
+
+    background-color: var(--igrey);
+}
+
+#burger-menu h1{
+    margin-top: 0;
+
+    width: calc(100% - 40px);
+    height: 10%;
+
+    color: var(--iwhite);
+    font-family: "Italianno";
+    letter-spacing: 0px;
+    font-size: 40px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    user-select: none;
+}
+
+#burger-menu nav {
+    width: 100%;
+    height: 90%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+#burger-menu nav a{
+
+    height: 20%;
+    width: 100%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    text-decoration: none;
+    color: var(--iwhite);
+    font-size: 20px;
+    font-family: "Poppins";
+    text-transform: uppercase;
+}
+
+#burger-menu nav a:hover{
+    background-color: var(--iwhite);
+    color: var(--igrey);
 }
